# SaRoMaN

./: A2-1+2-HV135-HG55-THD280-TC1-HOLD6-1.daq  AiDA.gdml  AiDASaroman.py  AiDA_TASD.gdml  MIND_JapanL1.gdml  MIND_firstBeamTest010517.gdml  MIND_jp_30Jan_1gap.gdml  MIND_jp_31Jan_1gap.gdml  MIND_secondBeamTest200617.gdml  MIND_secondBeamTest200627.gdml  MIND_secondBeamTest200630.gdml  MIND_secondBeamTest200631.gdml  MIND_secondBeamTestWithAida.gdml  MIND_v1.gdml  MIND_v3.gdml  MIND_v3a.gdml  MIND_v3b.gdml  MIND_v3c.gdml  MINDplotter.cpp  MINDplotter.h  ND_v1.gdml  ND_v3.gdml  half_AiDA.gdml  input-flux.root  multiRun.py  rootCombineNeutrino.C  saroman.py  testSaroman.py  testXML.xml
G01/: History  load_gdml.cc  vis.mac
data/: all_nd_spectra.root  nu_mu_decay_ND.root
digi_ND/: configure.ac
digi_ND/base/: MDargumentHandler.lo  MDdataFile.cpp  MDdataFile.lo  MDdataWordBM.cpp  MDdataWordBM.h  MDdataWordBM.lo  MDexception.lo  MDfragmentBM.cpp  MDfragmentBM.lo  MDpartEventBM.lo  Makefile.am  gdml_hit_constructor.cpp  gdml_hit_constructor.h  root2dst.cpp  xml_parser.cpp  xml_parser.h
mind_rec/util/: DeDxMap.h  EMINDplate.cpp  EMINDplate.h  MINDfitman.cpp  MINDplate.cpp  MINDplate.h  MINDplotter.cpp  MINDplotter.h  MINDsetup.cpp  MINDsetup.h  Makefile  Makefile.am  Makefile.in  cluster.cpp  cluster.h  detector.cpp  detector.h  line.cpp  line.h  plane_info.h  subDetector.cpp  subDetector.h
pythonlib/: __init__.py  batch_submit.py  handle_third_party.py  print_config.py  xml_AiDA_parser.py  xml_AiDA_parser2.py
sciNDG4/: mindG4.cc
scripts/: generate_AiDA_GDML.py
(+24 files in other folders)
