noinst_LTLIBRARIES = libbase.la

pkginclude_HEADERS = root2dst.h gdml_hit_constructor.h xml_parser.h MDargumentHandler.h MDdataContainer.h MDdataFile.h MDdataWord.h MDdataWordBM.h MDexception.h MDfragmentBM.h MDpartEventBM.h

INCLUDES= -I. -I.. 

libbase_la_SOURCES = root2dst.cpp  gdml_hit_constructor.cpp xml_parser.cpp MDargumentHandler.cpp MDdataFile.cpp MDdataWordBM.cpp MDexception.cpp MDfragmentBM.cpp MDpartEventBM.cpp

CLEANFILES = *~* 


