noinst_LTLIBRARIES = libutil.la

pkginclude_HEADERS = detector.h subDetector.h plane_info.h Utilities.h MINDsetup.h MINDsection.h MINDplate.h EMINDplate.h MINDfieldMapReader.h MINDplotter.h shower.h MINDfitman.h cluster.h line.h DeDxMap.h

INCLUDES= -I. -I.. 

libutil_la_SOURCES = detector.cpp subDetector.cpp plane_info.cpp Utilities.cpp MINDsetup.cpp MINDsection.cpp MINDplate.cpp EMINDplate.cpp MINDfieldMapReader.cpp MINDplotter.cpp shower.cpp MINDfitman.cpp cluster.cpp line.cpp DeDxMap.cpp

CLEANFILES = *~* 


